// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WfModuleHeader Mounts selected 1`] = `
<WfModuleHeader
  isSelected={true}
  moduleIcon="some-icon"
  moduleName="Some module name"
  status="busy"
>
  <div
    className="wf-module--placeholder mx-auto"
  >
    <div
      className="module-content"
    >
      <div
        className="module-card-header"
      >
        <div
          className="d-flex justify-content-start align-items-center"
        >
          <div
            className="icon-some-icon WFmodule-icon t-vl-gray mr-2"
          />
          <div
            className="t-vl-gray WFmodule-name"
          >
            Some module name
          </div>
        </div>
      </div>
    </div>
  </div>
</WfModuleHeader>
`;

exports[`WfModuleHeader Mounts unselected 1`] = `
<WfModuleHeader
  isSelected={false}
  moduleIcon="some-icon"
  moduleName="Some module name"
  status="busy"
>
  <div
    className="wf-module--placeholder mx-auto"
  >
    <div
      className="module-content"
    >
      <div
        className="module-card-header"
      >
        <div
          className="d-flex justify-content-start align-items-center"
        >
          <div
            className="icon-some-icon WFmodule-icon t-vl-gray mr-2"
          />
          <div
            className="t-vl-gray WFmodule-name"
          >
            Some module name
          </div>
        </div>
      </div>
    </div>
  </div>
</WfModuleHeader>
`;
